# OptimizationAlgorithm

./: .gitignore  README.md  convert.sh
report/: convert.sh  report.docx  report.html  report.md  template.html  template.tex
src/: .gitignore  CMakeLists.txt  Obj.cpp  Powell.h  TODO.md  benchmark.cpp  benchmark.h  def.h  line_search.cpp  line_search.h  linear_algebra.cpp  linear_algebra.h  main.cpp  multi_dim_optimizer.cpp  multi_dim_optimizer.h  obj.cpp  obj.h  optimizer.cpp  optimizer.h  optimizer_1d.cpp  optimizer_1d.h  test.cpp  test_line_search.cpp  util.cpp  util.h
src/Optimizer/: Algos.h  BFGS.cpp  BFGS.h  ConjugateGradient.cpp  ConjugateGradient.h  DFP.cpp  DFP.h  GradientDescent.cpp  GradientDescent.h  LineSearch.cpp  LineSearch.h  MultiDimOptimizer.cpp  MultiDimOptimizer.h  NelderMead.cpp  NelderMead.h  Newton.cpp  Newton.h  Powell.cpp  Powell.h  StrongWolfe.cpp  StrongWolfe.h  obj.cpp  obj.h  optimizer_1d.cpp  optimizer_1d.h  util.cpp  util.h
src/armadillo/usr/include/armadillo_bits/: config.hpp
src/armadillo/usr/lib/: libarmadillo.so.6  libarmadillo.so.6.700.6
src/armadillo/usr/share/Armadillo/CMake/: ArmadilloConfigVersion.cmake  ArmadilloLibraryDepends-noconfig.cmake  ArmadilloLibraryDepends.cmake
src/eigen/share/pkgconfig/: eigen3.pc
